// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoanAction creates a List.Item for each action 1`] = `
<LoanActions
  actions={
    Object {
      "action": "url",
      "anotheraction": "another-url",
    }
  }
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    >
      <ListItem
        key="action"
      >
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <Button
            as="button"
            onClick={[Function]}
            primary={true}
            role="button"
          >
            <button
              className="ui primary button"
              onClick={[Function]}
              role="button"
            >
              action
            </button>
          </Button>
        </div>
      </ListItem>
      <ListItem
        key="anotheraction"
      >
        <div
          className="item"
          onClick={[Function]}
          role="listitem"
        >
          <Button
            as="button"
            onClick={[Function]}
            primary={true}
            role="button"
          >
            <button
              className="ui primary button"
              onClick={[Function]}
              role="button"
            >
              anotheraction
            </button>
          </Button>
        </div>
      </ListItem>
    </div>
  </List>
</LoanActions>
`;

exports[`LoanAction renders initial state and checks the props are passed 1`] = `
<LoanActions
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <List
    horizontal={true}
  >
    <div
      className="ui horizontal list"
      role="list"
    />
  </List>
</LoanActions>
`;

exports[`LoanAction renders loader on action triggered 1`] = `
<LoanActions
  actionLoading={true}
  actions={Object {}}
  data={Object {}}
  onAction={[Function]}
>
  <Loader
    active={true}
    inline="centered"
  >
    <div
      className="ui active centered inline loader"
    />
  </Loader>
</LoanActions>
`;
